--- a/index.html
+++ b/index.html
@@ -3,18 +3,80 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/844f80b06b.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Josefin+Sans:300,400,600&display=swap" rel="stylesheet">    
     <link
-      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600&display=swap"
       rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/main.css" />
     <title>Clothes Store</title>
   </head>
   <body>
-    <h1>Clothes Store</h1>
+    <div class="container">
+      <header class="header">
+        <div class="header__logo">
+          <img src="images/logo.png" alt="Logo" class="header__logo-img" />
+        </div>
+
+        <nav class="navigation navigation--header-top">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="#" class="navigation__link"><i class="navigation-icon fas fa-search"></i></a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Contact Us</i></a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Sign In</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link"><i class="navigation-icon fas fa-shopping-cart"> (0)</i></a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="header__heading">
+          <h1 class="header__heading-text">Clothes Store</h1>
+        </div>
+
+        <nav class="navigation navigation--header-bottom">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Shop</a>
+            </li>
+            <li class="navigation__item navigation__item--dropdown">
+              <a href="#" class="navigation__link">Gift Ideas</a>
+              <ul class="navigation__dropdown-list">
+                <li class="navigation__dropdown-item">
+                  <a href="#" class="navigation__dropdown-link">Under $25</a>
+                </li>
+                <li class="navigation__dropdown-item">
+                  <a href="#" class="navigation__dropdown-link">$25 to $50</a>
+                </li>
+                <li class="navigation__dropdown-item">
+                  <a href="#" class="navigation__dropdown-link">Above $50</a>
+                </li>
+              </ul>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">About Us</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">Our Team</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="navigation__link">News</a>
+            </li>
+          </ul>
+        </nav>
+
+      </header>
+    </div>
   </body>
 </html>
