Completed HTML markup for slideshow component

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- header -->
       <header class="header">
         <div class="header__logo">
           <img src="images/logo.png" alt="Logo" class="header__logo-img" />
@@ -75,8 +76,48 @@
             </li>
           </ul>
         </nav>
-
       </header>
+      <!-- end of header -->
+
+      <!-- slideshow -->
+      <section class="slideshow">
+        <div class="slideshow__slide">
+          <div class="slideshow__content">
+            <h2 class="slideshow__heading">Slide 1</h2>
+            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+          </div>
+          <img src="images/img1.jpg" alt="Image one" class="slideshow__image">
+        </div>
+        <div class="slideshow__slide">
+          <div class="slideshow__content">
+            <h2 class="slideshow__heading">Slide 2</h2>
+            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+          </div>
+          <img src="images/img2.jpg" alt="Image two" class="slideshow__image">
+        </div>
+        <div class="slideshow__slide">
+          <div class="slideshow__content">
+            <h2 class="slideshow__heading">Slide 3</h2>
+            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+          </div>
+          <img src="images/img3.jpg" alt="Image three" class="slideshow__image">
+        </div>
+        <div class="slideshow__slide">
+          <div class="slideshow__content">
+            <h2 class="slideshow__heading">Slide 4</h2>
+            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+          </div>
+          <img src="images/img4.jpg" alt="Image four" class="slideshow__image">
+        </div>
+        <div class="slideshow__slide">
+          <div class="slideshow__content">
+            <h2 class="slideshow__heading">Slide 5</h2>
+            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+          </div>
+          <img src="images/img5.jpg" alt="Image five" class="slideshow__image">
+        </div>
+      </section>
+      <!-- end of slideshow -->
     </div>
   </body>
 </html>
