Completed product section with button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       src="https://kit.fontawesome.com/844f80b06b.js"
       crossorigin="anonymous"
     ></script> -->
-    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Josefin+Sans:300,400,600&display=swap" rel="stylesheet">    
+    <link
+      href="https://fonts.googleapis.com/css?family=Great+Vibes|Josefin+Sans:300,400,600&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
@@ -28,16 +31,20 @@
         <nav class="navigation navigation--header-top">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a href="#" class="navigation__link"><i class="navigation-icon fas fa-search"></i></a>
+              <a href="#" class="navigation__link"
+                ><i class="navigation-icon fas fa-search"></i
+              ></a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Contact Us</i></a>
+              <a href="#" class="navigation__link">Contact Us</a>
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">Sign In</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link"><i class="navigation-icon fas fa-shopping-cart"> (0)</i></a>
+              <a href="#" class="navigation__link"
+                ><i class="navigation-icon fas fa-shopping-cart"> (0)</i></a
+              >
             </li>
           </ul>
         </nav>
@@ -84,40 +91,137 @@
         <div class="slideshow__slide">
           <div class="slideshow__content">
             <h2 class="slideshow__heading">Slide 1</h2>
-            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+            <p class="slideshow__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+              temporibus natus error in soluta porro aut, ipsam voluptatibus
+              similique corporis.
+            </p>
           </div>
-          <img src="images/img1.jpg" alt="Image one" class="slideshow__image">
+          <img src="images/img1.jpg" alt="Image one" class="slideshow__image" />
         </div>
         <div class="slideshow__slide">
           <div class="slideshow__content">
             <h2 class="slideshow__heading">Slide 2</h2>
-            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+            <p class="slideshow__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+              temporibus natus error in soluta porro aut, ipsam voluptatibus
+              similique corporis.
+            </p>
           </div>
-          <img src="images/img2.jpg" alt="Image two" class="slideshow__image">
+          <img src="images/img2.jpg" alt="Image two" class="slideshow__image" />
         </div>
         <div class="slideshow__slide">
           <div class="slideshow__content">
             <h2 class="slideshow__heading">Slide 3</h2>
-            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+            <p class="slideshow__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+              temporibus natus error in soluta porro aut, ipsam voluptatibus
+              similique corporis.
+            </p>
           </div>
-          <img src="images/img3.jpg" alt="Image three" class="slideshow__image">
+          <img
+            src="images/img3.jpg"
+            alt="Image three"
+            class="slideshow__image"
+          />
         </div>
         <div class="slideshow__slide">
           <div class="slideshow__content">
             <h2 class="slideshow__heading">Slide 4</h2>
-            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+            <p class="slideshow__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+              temporibus natus error in soluta porro aut, ipsam voluptatibus
+              similique corporis.
+            </p>
           </div>
-          <img src="images/img4.jpg" alt="Image four" class="slideshow__image">
+          <img
+            src="images/img4.jpg"
+            alt="Image four"
+            class="slideshow__image"
+          />
         </div>
         <div class="slideshow__slide">
           <div class="slideshow__content">
             <h2 class="slideshow__heading">Slide 5</h2>
-            <p class="slideshow__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius temporibus natus error in soluta porro aut, ipsam voluptatibus similique corporis.</p>
+            <p class="slideshow__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+              temporibus natus error in soluta porro aut, ipsam voluptatibus
+              similique corporis.
+            </p>
           </div>
-          <img src="images/img5.jpg" alt="Image five" class="slideshow__image">
+          <img
+            src="images/img5.jpg"
+            alt="Image five"
+            class="slideshow__image"
+          />
         </div>
       </section>
       <!-- end of slideshow -->
+
+      <!-- products -->
+      <section class="products">
+        <div class="products__heading">
+          <h1 class="products__heading-text">Featured Products</h1>
+        </div>
+
+        <div class="products__wrapper">
+          <div class="product">
+            <img
+              src="images/product1.png"
+              alt="Dress with flower pattern"
+              class="product__image"
+            />
+            <div class="product__description">
+              <h2 class="product__heading">Dress</h2>
+              <p class="product__price">
+                Price: <span class="product__amount">$150</span>
+              </p>
+              <a href="#" class="product__btn">Buy Now</a>
+            </div>
+          </div>
+          <div class="product">
+            <img
+              src="images/product2.png"
+              alt="Dress with flower pattern"
+              class="product__image"
+            />
+            <div class="product__description">
+              <h2 class="product__heading">Pants</h2>
+              <p class="product__price">
+                Price: <span class="product__amount">$100</span>
+              </p>
+              <a href="#" class="product__btn">Buy Now</a>
+            </div>
+          </div>
+          <div class="product">
+            <img
+              src="images/product3.png"
+              alt="Dress with flower pattern"
+              class="product__image"
+            />
+            <div class="product__description">
+              <h2 class="product__heading">Shirt</h2>
+              <p class="product__price">
+                Price: <span class="product__amount">$50</span>
+              </p>
+              <a href="#" class="product__btn">Buy Now</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="arrow-button">
+          <a href="#" class="arrow-button__link">
+            <div class="arrow-button__bg"></div>
+            <div class="arrow-button__arrow">
+              <div class="arrow-button__line arrow-button__line--1"></div>
+              <div class="arrow-button__line arrow-button__line--2"></div>
+              <div class="arrow-button__line arrow-button__line--3"></div>
+            </div>
+            <span class="arrow-button__text">See More</span>
+          </a>
+        </div>
+      </section>
+      <!-- end of products -->
     </div>
   </body>
 </html>
